* Fixed: Tag-related cost display issues in the child site widget. * Fixed: Tooltip positioning anomalies on the Insights page. * Fixed: Incorrect extension slugs affecting main navigation for SEOPress, Custom Post Types, and Vulnerability Checker. * Fixed: The reconnect site button functionality by adding the missing icon class. * Fixed: An uncaught type error on the site-specific themes update page. * Added: Cost Summary: a new widgetized page for financial oversight. * Added: Widgets for "Payments Left for This Month," "Upcoming Renewals" (monthly and yearly), "Monthly Totals," and "Annual Expense Distribution by Category" on the Cost Summary page. * Added: Filtering system and the ability to save filter segments on the 'Manage Costs' page. * Added: Feature for saving icons or custom images for costs. * Added: Color picker tool for product categories and cost items. * Added: Option to arrange default columns in the 'Manage Cost' table. * Updated: Central alignment for WP Core, Plugins, and Themes columns in 'Manage Sites.' * Updated: Automatically reveal the site filters row upon any filter application. * Updated: Amended tag deletion confirmation to correctly reference 'tag' instead of 'group.' * Updated: Changed background colors for the second-level navigation menu and the Collapse button in the classic theme. * Updated: Introduced a new menu item for WPvivid under 'Backups.' * Updated: ID attributes for second-level menu items in extension categories. * Updated: Adjusted modal close icon color in Minimalistic and WP Admin themes. * Updated: Refined default column layout in the 'Manage Cost' table. * Updated: Updated display icons for Single-Site and Multi-Site licenses. * Updated: Enhanced display of cost type column content. * Updated: Visual update to show payment methods with icons. * Updated: Moved 'Edit Notes' to the actions menu. * Updated: Updated 'Cost Tracker' column in 'Manage Sites' and 'Manage Clients' for 30-Day Cost Forecast visibility.

--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -172,3 +172,19 @@
 .mainwp-ui .ui.dimmer.modals.active {
   z-index: 99999;
 }
+
+.mainwp-ui .icon.card {
+  padding: 0;
+  min-width: auto;
+  max-width: none;
+  border: none;
+  box-shadow: none;
+  background: none !important;
+}
+
+.mainwp-ui .left.action.input .mainwp-color-picker-input {
+  min-height: 2.71428571em;
+  padding: 5px !important;
+  border-radius: 0 10px 10px 0 !important;
+  -webkit-border-radius: 0 10px 10px 0 !important;
+}
