--- a/assets/css/themes/mainwp-default-2024-theme.css
+++ b/assets/css/themes/mainwp-default-2024-theme.css
@@ -565,6 +565,16 @@
   background-color: var(--grey-dark-alt);
 }
 
+.mainwp-ui.mainwp-custom-theme table.dataTable tr th:first-child,
+.mainwp-ui.mainwp-custom-theme table.dataTable tr td:first-child {
+    border-left: none !important;
+}
+
+.mainwp-ui.mainwp-custom-theme table.dataTable tr th:last-child,
+.mainwp-ui.mainwp-custom-themetable.dataTable tr td:last-child {
+    border-right: none !important;
+}
+
 /* Pagination */
 
 .mainwp-ui.mainwp-custom-theme .ui.pagination.menu {
@@ -576,6 +586,8 @@
 .mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item:hover,
 .mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item.active {
   background: var(--accent);
+  color: #ffffff !important;
+  padding: 0.5rem 1rem !important;
 }
 .mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item:hover .page-link,
 .mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item.active .page-link {
