UI and UX improvements
Bump version to 6.0 and update stable tag. Refine color and icon handling for event logs and activity history, improving visual feedback and consistency. Enhance file upload feedback with tooltips and icons. Update table row selection logic for better usability. Adjust terminology from 'Security Issues' to 'Site Hardening' in UI and documentation. Improve theme and plugin widget footers and timezone display. Refactor some JavaScript for better maintainability and fix minor UI/UX issues across multiple pages.

--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -306,7 +306,9 @@
 .mainwp-ui.mainwp-custom-theme i.blue.icon.inverted {
   background-color: var(--mainwp-blue) !important;
 }
-
+.mainwp-ui.mainwp-custom-theme i.red.icon {
+  color: var(--mainwp-red) !important;
+}
 .mainwp-ui.mainwp-custom-theme i.red.icon.inverted {
   background-color: var(--mainwp-red) !important;
 }
@@ -1505,11 +1507,6 @@ body.mainwp-ui.mainwp-custom-theme,
 .mainwp-ui.mainwp-custom-theme .ui.dimmer,
 .mainwp-ui.mainwp-custom-theme .ui.inverted.dimmer {
   background-color: var(--mainwp-base-background-secondary) !important;
-}
-
-.mainwp-ui.mainwp-custom-theme .ui.dimmer .text,
-.mainwp-ui.mainwp-custom-theme .ui.inverted.dimmer .text {
-  color: var(--mainwp-green) !important;
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.loader:after {
